Fixes table overflow issues

--- a/src/app.scss
+++ b/src/app.scss
@@ -166,7 +166,6 @@
     table{
         width: 100%;
         display: block;
-        overflow-x: auto;
 
         thead{
             display: block;
